# metrolog

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
backup/: service_park_backup
config/: models_config.yaml
doc/: architecture.md  project_preparing.md  project_structure.md  search_engine.md  tech_stack.md
doc/service_park/: Инструкция_по_запуску_Service_Park.md  Работа_с_Makefile.md
nginx/: nginx.conf
qdrant_storage/: raft_state.json
qdrant_storage/collections/miinstance_park/: config.json
qdrant_storage/collections/miinstance_park/0/: replica_state.json
src/MIIpark_service/api_go/: go.mod
src/ai_models/classifier_model/: classifier.ipynb
src/databases/postgres/migrations/: migration.sql
src/databases/qdrant/: docker-compose.yml
src/models/: __init__.py  base.py  borderline_type_classifier_model.py  lifecycle_model.py  purchase_model.py
src/search_engine/: Dockerfile  go.mod  go.sum
src/search_engine/ai_model/: Dockerfile  bm25_indexer.py  downloader.py  main.py  model_service.py  pyproject.toml
src/search_engine/ai_model/models_cache/models--Qdrant--bm25/: files_metadata.json
src/search_engine/ai_model/src/: app.py  config.py  download_models.py
src/search_engine/ai_model/src/models/: dense_model.py  late_model.py  sparse_model.py
src/search_engine/ai_model/src/routes/: bm25.py  dense.py  health.py  late.py  sparse.py
src/search_engine/ai_model/src/services/: bm25_indexer.py  embedding_service.py  model_service.py
src/search_engine/cmd/server/: server.go
src/search_engine/config/: config.env  config.env.example  config.go
src/search_engine/internal/handlers/: handlers.go
src/search_engine/internal/model/: embedding_model.go  miinstances_model.go
src/search_engine/internal/repository/: qdrant_repository.go
src/search_engine/internal/service/: embedding_service.go  interfaces.go  (+3 more)
src/searcher/service/: go.mod
src/service_park/: .env.example  Dockerfile  go.mod  go.sum  main.go
src/service_park/config/: config.go
src/service_park/db/: connect.go
src/service_park/handler/: health_handler.go  miinstance_handler.go
src/service_park/models/: miinstance.go
src/service_park/repository/: miinstance_repo.go
src/service_park/routers/: routes.go
src/service_park/service/: miinstance_service.go
src/service_park/types/: null.go
src/service_park/utils/: string_utils.go
src/web_site/: forecast.html  forecast.js  index.html  script.js  styles.css
(+6 files in other folders)
