[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrolog"
version = "0.1.0"
description = "Система анализа и прогнозирования парка средств измерений"
requires-python = ">=3.12"


dependencies = [
    # Обработка данных
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    
    # Модели
    "catboost>=1.2.0",
    "prophet>=1.1.0",

    # Параллелизм (для уменьшения нагрузки RAM и CPU)
    "dask>=2026.3.0",
    
    # API и сервис
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    
    # База данных
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    
    # Утилиты
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
    "shap>=0.42.0"              # Интерпретация моделей
]