[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-service"
version = "1.0.0"
description = "Сервис для генерации эмбеддингов с поддержкой dense, sparse (BM25) и late interaction моделей"

dependencies = [
    "flask>=2.3.0,<3.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "rank_bm25==0.2.2",
    "fastembed>=0.3.0,<0.4.0",  # Для BM25
    "torch>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]
